@@ -700,6 +700,21 @@ alloc_uncompress_buffer( unsigned char **buffer, int length )
   return 0;
 }
 
+int disk_preformat( disk_t *d )
+{
+  buffer_t buffer;
+
+  buffer.file.length = 0;
+  buffer.index = 0;
+  if( trackgen( d, &buffer, 0, 0, 0xff, 1, 128,
+		      NO_PREINDEX, GAP_MINIMAL_MFM, NO_INTERLEAVE, 0xff ) )
+    return DISK_GEOM;
+  if( trackgen( d, &buffer, 0, 2, 0xfe, 1, 128,
+		      NO_PREINDEX, GAP_MINIMAL_MFM, NO_INTERLEAVE, 0xff ) )
+    return DISK_GEOM;
+  return DISK_OK;
+}
+
 /* open a disk image */
 #define GEOM_CHECK \
     if( d->sides < 1 || d->sides > 2 || \
